# ICAPS26-Deciding-State-Safety-in-FOND

./: .gitignore  README.md
code/: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  COptionsConfig.cmake  DependenciesConfig.cmake  Dockerfile  PlaJAFiles.cmake  README.md  assertions.h  cmake.sh  globals.cpp  globals.h  main.cpp  naming_convetions.xml  using_plaja.h
code/adversarial_attack/: PlaJAFiles.cmake  adversarial_attack.cpp  adversarial_attack.h
code/dependencies/: .dockerignore  Dockerfile  cmake_install.cmake  cmake_z3.sh  install_cudd.sh  install_cxxtest.sh  install_marabou.sh  install_nlohmann.sh  install_pybind11.sh  install_torch.sh  install_veritas.sh  install_z3.sh  model_repair.txt  old_Dockerfile
code/domain_specific/: PlaJAFiles.cmake  README.txt  blocksworld.cpp  blocksworld.h
code/example_experiment/: README.md  faults.sh  ql_agent.sh  state_safety.sh
code/exception/: PlaJAFiles.cmake  assertion_exception.cpp  assertion_exception.h  constructor_exception.cpp  constructor_exception.h  exception_strings.cpp  exception_strings.h  not_implemented_exception.cpp  not_implemented_exception.h  not_supported_exception.cpp  not_supported_exception.h  option_parser_exception.cpp  option_parser_exception.h  parser_exception.cpp  parser_exception.h  plaja_exception.cpp  plaja_exception.h  property_analysis_exception.cpp  property_analysis_exception.h  runtime_exception.cpp  runtime_exception.h  semantics_exception.cpp  semantics_exception.h  smt_exception.cpp  smt_exception.h
code/include/: compiler_config.h.cmake  compiler_config_const.h  ct_config.h.cmake  ct_config_const.h  factory_config.h.cmake  factory_config_const.h  marabou_config.h.cmake  marabou_config_const.h  pa_config.h.cmake  pa_config_const.h  pybind_config.h.cmake
code/include/marabou_include/: disjunction_constraint.h  disjunction_constraint_base.h  dnc_manager.h  engine.h  equation.h  equation_to_aux_var.h  exceptions.h  float_utils.h  forward_marabou.h  infeasible_query_exception.h  input_query.h  learned_conflicts.h  list.h  map.h  milp_solver_bound_tightening_type.h  options.h  pair.h  piecewise_linear_case_split.h  preprocessor.h  relu_constraint.h  vector.h
code/option_parser/: PlaJAFiles.cmake  enum_option_values.cpp  enum_option_values.h  enum_option_values_set.cpp  enum_option_values_set.h  forward_option_parser.h  option_parser.cpp  option_parser.h  option_parser_aux.cpp  option_parser_aux.h  plaja_options.cpp  plaja_options.h
code/parser/: PlaJAFiles.cmake  ast_forward_declarations.h  jani_words.cpp  jani_words.h  parse_expressions.cpp  parse_structures.cpp  parse_types.cpp  parser.cpp  parser.h  parser_utils.cpp  parser_utils.h  using_parser.h
code/parser/ast/: PlaJAFiles.cmake  action.cpp  action.h  assignment.cpp  assignment.h  ast_element.cpp  ast_element.h  automaton.cpp  automaton.h  commentable.cpp  commentable.h  composition.cpp  composition.h  composition_element.cpp  composition_element.h  constant_declaration.cpp  constant_declaration.h  destination.cpp  destination.h  edge.cpp  edge.h  forward_ast.h  location.cpp  location.h  metadata.cpp  metadata.h  model.cpp  model.h  property.cpp  property.h  property_interval.cpp  property_interval.h  reward_bound.cpp  reward_bound.h  reward_instant.cpp  reward_instant.h  synchronisation.cpp  synchronisation.h  transient_value.cpp  transient_value.h  (+2 more)
code/parser/nn_parser/: PlaJAFiles.cmake  REFERENCES.md  neural_network.cpp  neural_network.h  using_nn.h
code/parser/visitor/: PlaJAFiles.cmake  ast_element_visitor.cpp  ast_element_visitor.h  ast_element_visitor_const.cpp  ast_element_visitor_const.h  ast_optimization.cpp  ast_optimization.h  ast_specialization.cpp  ast_specialization.h  ast_standardization.cpp  ast_standardization.h  ast_visitor.cpp  ast_visitor.h  ast_visitor_const.cpp  ast_visitor_const.h  forward_visitor.h  is_constant.cpp  is_constant.h  linear_constraints_checker.cpp  linear_constraints_checker.h  restrictions_checker.cpp  restrictions_checker.h  retrieve_variable_bound.cpp  retrieve_variable_bound.h  semantics_checker.cpp  semantics_checker.h  set_constants.cpp  set_constants.h  set_variable_index.cpp  set_variable_index.h  simple_checks_visitor.cpp  simple_checks_visitor.h  to_normalform.cpp  to_normalform.h  variable_substitution.cpp  variable_substitution.h  variables_of.cpp  variables_of.h
code/policy_learning/: PlaJAFiles.cmake  explorer_teacher.cpp  explorer_teacher.h  forward_policy_learning.h  learning_statistics.cpp  learning_statistics.h  policy_model.cpp  policy_model.h  policy_teacher.cpp  policy_teacher.h  ql_agent.cpp  ql_agent.h  ql_agent_torch.cpp  ql_agent_torch.h  reduction_agent.cpp  reduction_agent.h  reduction_statistics.cpp  reduction_statistics.h  replay_buffer.cpp  replay_buffer.h  slicing_window.cpp  slicing_window.h  transition_set.h  using_policy_learning.h
code/policy_learning/neural_networks/: neural_network.cpp  neural_network.h
code/search/: PlaJAFiles.cmake  using_search.h
code/search/bmc/: PlaJAFiles.cmake  bmc.cpp  bmc.h  bmc_marabou.cpp  bmc_marabou.h  bmc_z3.cpp  bmc_z3.h  forward_bmc.h  solution_checker_bmc.cpp  solution_checker_bmc.h  solution_checker_instance_bmc.cpp  solution_checker_instance_bmc.h
code/search/factories/: PlaJAFiles.cmake  configuration.cpp  configuration.h  forward_factories.h  search_engine_factory.cpp  search_engine_factory.h  (+2 more)
code/stats/: PlaJAFiles.cmake  forward_stats.h  stats_base.cpp  stats_base.h  stats_double.h  stats_int.h  stats_interface.cpp  stats_interface.h  stats_string.h  stats_unsigned.h
code/tests/: CMakeLists.txt  PlaJAFiles.cmake
code/to_nuxmv/: PlaJAFiles.cmake  forward_to_nuxmv.h  to_nuxmv.cpp  to_nuxmv.h  to_nuxmv_factory.cpp  to_nuxmv_factory.h  to_nuxmv_options.cpp  to_nuxmv_options.h  to_nuxmv_restrictions_checker.cpp  to_nuxmv_restrictions_checker.h  to_nuxmv_visitor.cpp  to_nuxmv_visitor.h  using_nuxmv.h
code/utils/: PlaJAFiles.cmake  default_constructors.h  floating_utils.h  index_iterator.h  iterator_utils.h  priority_queue.h  rng.cpp  rng.h  string_set.h  utils.cpp  utils.h
(+925 files in other folders)
